--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -4227,6 +4227,7 @@ STR_NEWGRF_INSPECT_CAPTION_OBJECT_AT                            :{STRING1} at {H
 STR_NEWGRF_INSPECT_CAPTION_OBJECT_AT_OBJECT                     :Object
 STR_NEWGRF_INSPECT_CAPTION_OBJECT_AT_RAIL_TYPE                  :Rail type
 STR_NEWGRF_INSPECT_CAPTION_OBJECT_AT_ROAD_TYPE                  :Road/tram type
+STR_NEWGRF_INSPECT_CAPTION_OBJECT_AT_SIGNALS                    :Signals
 
 STR_NEWGRF_INSPECT_QUERY_CAPTION                                :{WHITE}NewGRF variable 60+x parameter (hexadecimal)
 
