--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -6266,6 +6266,7 @@ STR_ERROR_CAN_T_REMOVE_SIGNALS_FROM                             :{WHITE}Can't re
 STR_ERROR_SIGNAL_CAN_T_CONVERT_SIGNALS_HERE                     :{WHITE}Can't convert signals here...
 STR_ERROR_THERE_IS_NO_RAILROAD_TRACK                            :{WHITE}... there is no railway track
 STR_ERROR_THERE_ARE_NO_SIGNALS                                  :{WHITE}... there are no signals
+STR_ERROR_UNSUITABLE_SIGNAL_TYPE                                :{WHITE}... unsuitable signal type
 
 STR_ERROR_CAN_T_CONVERT_RAIL                                    :{WHITE}Can't convert rail type here...
 
