--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -1630,6 +1630,9 @@ STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_8X                   :8x zoom and abo
 STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_16X                  :16x zoom and above
 STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_32X                  :32x zoom and above
 
+STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT              :Show order occupancy by default: {STRING2}
+STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT_HELPTEXT     :Show detailed per-order occupancy by default when opening a vehicle's orders window
+
 STR_CONFIG_SETTING_ADV_SIG_BRIDGE_TUN_MODES                     :Enable signals on bridges/tunnels advanced modes: {STRING2}
 STR_CONFIG_SETTING_ADV_SIG_BRIDGE_TUN_MODES_HELPTEXT            :Enables use of advanced modes of signal simulation on bridges and tunnels. When disabled, bridges/tunnels which are not already in an advanced mode cannot be changed to an advanced mode, however other players may choose to enable this setting and use an advanced mode.
 
